adicionando busca de company por uuid
